--- a/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
+++ b/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
@@ -204,6 +204,8 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Day.cs" />
+    <Compile Include="Models\Destination.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
