--- a/ProjetAirBermudes/AirBermudesClientAngular/AirBermudesClientAngular.csproj
+++ b/ProjetAirBermudes/AirBermudesClientAngular/AirBermudesClientAngular.csproj
@@ -59,7 +59,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.js" />
+    <Content Include="Content\datetimepicker.css" />
+    <Content Include="Content\jquery.datetimepicker.css" />
     <Content Include="index.html" />
+    <Content Include="Scripts\datetimepicker.js" />
+    <Content Include="Scripts\jquery.datetimepicker.js" />
+    <Content Include="Scripts\moment-with-locales.js" />
+    <Content Include="Scripts\moment-with-locales.min.js" />
+    <Content Include="Scripts\moment.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="travels\home.html" />
     <Content Include="travels\travel.js" />
     <Content Include="usersDebug\index.html" />
@@ -74,6 +82,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
+    <Content Include="Content\datetimepicker.css.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
