--- a/ProjetAirBermudes/ProjetAirBermudes/packages.config
+++ b/ProjetAirBermudes/ProjetAirBermudes/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework.fr" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="jQuery-datetimepicker" version="2.4.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core.fr" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
@@ -49,6 +50,7 @@
   <package id="Microsoft.Owin.Security.Twitter.fr" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.10.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
