--- a/ProjetAirBermudes/packages/repositories.config
+++ b/ProjetAirBermudes/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\AirBermudesClientAngular\packages.config" />
   <repository path="..\ProjetAirBermudes\packages.config" />
 </repositories>
