--- a/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
+++ b/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
@@ -299,7 +299,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53762</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
