--- a/ProjetAirBermudes/AirBermudesClientAngular/AirBermudesClientAngular.csproj
+++ b/ProjetAirBermudes/AirBermudesClientAngular/AirBermudesClientAngular.csproj
@@ -75,14 +75,19 @@
     <Content Include="header\header.js" />
     <Content Include="Images\loading.gif" />
     <Content Include="index.html" />
-    <Content Include="places\markerPopup.html" />
-    <Content Include="places\places.js" />
-    <Content Include="places\testPlaces.html" />
+    <Content Include="mapService\courseMarkerPopup.html" />
+    <Content Include="mapService\suggestionMarkerPopup.html" />
+    <Content Include="mapService\testMaps.html" />
+    <Content Include="mapService\mapService.js" />
     <Content Include="Scripts\jquery.datetimepicker.js" />
+    <Content Include="travelsMarc\createTravel.html" />
     <Content Include="travels\edit.html" />
     <Content Include="travels\edit.js" />
     <Content Include="travels\home.html" />
     <Content Include="travels\travel.js" />
+    <Content Include="travelsMarc\travels.js" />
+    <Content Include="travelsMarc\travels.html" />
+    <Content Include="travelsMarc\travelMinDetails.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
