--- a/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
+++ b/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
@@ -211,6 +211,7 @@
     <Compile Include="DTOs\CourseDTO.cs" />
     <Compile Include="DTOs\DayDTO.cs" />
     <Compile Include="DTOs\DayListDTO.cs" />
+    <Compile Include="DTOs\DestinationDTO.cs" />
     <Compile Include="DTOs\TravelDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
