--- a/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
+++ b/ProjetAirBermudes/ProjetAirBermudes/AirBermudesAPI.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Controllers\DaysController.cs" />
     <Compile Include="Controllers\DestinationsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ShareController.cs" />
     <Compile Include="Controllers\TransportsController.cs" />
     <Compile Include="Controllers\TravelsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -225,6 +226,7 @@
     <Compile Include="DTOs\DayDTO.cs" />
     <Compile Include="DTOs\DayListDTO.cs" />
     <Compile Include="DTOs\DestinationDTO.cs" />
+    <Compile Include="DTOs\ShareDTO.cs" />
     <Compile Include="DTOs\TravelDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
